--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -18,18 +18,22 @@
       <div data-include="components/footer.html"></div>
     </footer>
     <script>
-      document
-        .getElementById("validation_link_html")
-        .setAttribute(
+      var validationLinkHtml = document.getElementById("validation_link_html");
+      var validationLinkCss = document.getElementById("validation_link_css");
+    
+      if (validationLinkHtml) {
+        validationLinkHtml.setAttribute(
           "href",
           "https://validator.w3.org/check?uri=" + location.href
         );
-      document
-        .getElementById("validation_link_css")
-        .setAttribute(
+      }
+    
+      if (validationLinkCss) {
+        validationLinkCss.setAttribute(
           "href",
           "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
         );
+      }
     </script>
     <script src="scripts/HTMLInclude.min.js"></script>
   </body>
