--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Homepage</title>
+    <title>Nathaniel Hayes's Nimble Hedgehog || ITIS 3135 || Hobby</title>
     <link rel="stylesheet" href="styles/default.css" />
   </head>
   <body>
