--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -33,22 +33,22 @@ nav ul {
 
   nav ul li {
     display: inline;
-    margin-right: 10px; /* Adjust as needed */
+    margin-right: 10px; 
   }
 
   nav ul li a {
     display: inline-block;
-    padding: 10px 20px; /* Adjust padding as needed */
+    padding: 10px 20px;
     text-decoration: none;
-    background-color: #31363F; /* Button background color */
-    color: #fff; /* Button text color */
+    background-color: #31363F; 
+    color: #fff; 
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
 
   nav ul li a:hover {
-    background-color: #0056b3; /* Button background color on hover */
+    background-color: #0056b3; 
   }
 
 main {
@@ -98,13 +98,13 @@ figcaption{
 }
 
 p {
-    width: 80%; /* Set the width of the content */
-    margin: 0 auto; /* Center the content horizontally */
-    font-family: Arial, sans-serif; /* Example font family */
-    font-size: 16px; /* Example font size */
-    color: #EEEEEE; /* Example text color */
-    line-height: 1.5; /* Example line height */
-    /* Add more CSS properties as needed */
+    width: 80%; 
+    margin: 0 auto; 
+    font-family: Arial, sans-serif; 
+    font-size: 16px; 
+    color: #EEEEEE; 
+    line-height: 1.5; 
+    
   }
 
   h2{
@@ -128,17 +128,13 @@ p {
   }
 
   a {
-    color: #76ABAE; /* Change link color */
-    text-decoration: none; /* Remove underline */
+    color: #76ABAE; 
+    text-decoration: none; 
   }
 
   a:hover {
-    color: #EEEEEE; /* Change hover color */
+    color: #EEEEEE; 
   }
-
-  .disable-css {
-            all: unset; /* This will reset all styles */
-        }
     </style>
     </head>
     <body>
@@ -220,7 +216,6 @@ p {
 
             <section id="where">
                 <h2>Where To Skateboard</h2>
-                <!-- Content for "When" section goes here -->
                 <figure>
                     <img src="images/skateboardweb3.jpg" alt="img3">
                     <figcaption>Group of skateboarders at skate
@@ -251,7 +246,6 @@ p {
 
             <section id="how">
                 <h2>How To Skateboard</h2>
-                <!-- Content for "Where" section goes here -->
                 <figure>
                     <img src="images/skateboardweb1.jpg" alt="img4">
                     <figcaption>Two skateboarders at a skate
@@ -285,7 +279,6 @@ p {
 
             <section id="why">
                 <h2>Why You Should Skateboard</h2>
-                <!-- Content for "How" section goes here -->
                 <figure>
                     <img src="images/skateboardweb6.jpg" alt="img5">
                     <figcaption>Guy on
@@ -316,7 +309,6 @@ p {
 
             <section id="about-me">
                 <h2>About Me</h2>
-                <!-- Content for "Why" section goes here -->
                 <figure>
                     <img src="images/IMG_5146.jpeg" alt="img6">
                     <figcaption>Picture of
@@ -374,29 +366,22 @@ p {
                     src="images/button_validation_wcag.png" alt="WCAG" />
             </footer>
             <script>
-        // JavaScript to toggle section visibility
         document.addEventListener("DOMContentLoaded", function() {
-    // Show the first section by default
     var defaultSection = document.querySelector("main section:first-child");
     defaultSection.style.display = "block";
 
-    // Add click event listeners to the navigation links
     var navLinks = document.querySelectorAll("nav a");
     navLinks.forEach(function(link) {
         link.addEventListener("click", function(event) {
-            // Prevent default link behavior
             event.preventDefault();
 
-            // Hide all sections
             var sections = document.querySelectorAll("main section");
             sections.forEach(function(section) {
                 section.style.display = "none";
             });
 
-            // Get the target section ID from the link's href
             var targetId = link.getAttribute("href").substring(1);
 
-            // Show the target section
             var targetSection = document.getElementById(targetId);
             targetSection.style.display = "block";
         });
