--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -108,7 +108,7 @@
             <div data-include="components/footer.html"></div>
         </footer>
 
-        <script src="scripts/HTMLInclude.min.js"></script>
+        <script src="scripts/defaultscripts.js"></script>
     </body>
 
 </html>
